t+is:[[púrtvín]] t-balance t+is:[[portvín]] t+is:[[höfn]] t+is:[[hafnarborg]] ([[WT:EDIT|Assisted]]) <port#12785576>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -47,6 +47,7 @@
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
 * Hungarian: {{t+|hu|kikötő}}
+* Icelandic: {{t|is|höfn|f}}
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 {{trans-mid}}
@@ -78,8 +79,9 @@
 * German: {{t+|de|Hafenstadt|f}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}
 * Hungarian: {{t+|hu|kikötőváros}}
-* [[Ido]]: [[portuo]]
+* Icelandic: {{t|is|hafnarborg|f}}
 {{trans-mid}}
+* [[Ido]]: [[portuo]]
 * Italian: [[città portuale]] {{f}}
 * Latvian: {{t|lv|ostas pilsēta |f}}
 * Lithuanian: {{t|lt|uostamiestis|m}}
@@ -257,8 +259,9 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from whence the wines wer
 * Finnish: {{t-|fi|portviini}}
 * French: [[vin de Porto]] {{m}}
 * German: {{t+|de|Portwein|m}}
-{{trans-mid}}
 * Greek: {{t|el|πορτό|n|tr=portó}}, {{qualifier|rare}} {{t|el|οίνος Πορτογαλίας|m|tr=oínos Portogalías}}
+{{trans-mid}}
+* Icelandic: {{t|is|púrtvín|n}}, {{t|is|portvín|n}}
 * Italian: {{t+|it|porto|m}}
 * Portuguese: {{t+|pt|vinho do Porto|m}}
 * Spanish: [[vino de Oporto]] {{m}}
