--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -1,6 +1,8 @@
 ==Translingual==
 
 ===Etymology===
+{{Han compound|人|alt1=亻|t1=person|建|c1=s|c2=p|ls=psc}}
+
 {{Han compound|人|alt1=亻|建|t1=person|t2=erect|ls=ic}}
 
 ===Han character===
