--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -12,23 +12,23 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 ===Verb===
 {{en-verb}}
 
-# {{transitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
-# {{transitive}} {{slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
+# {{transitive}} to apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force
+# {{transitive}} {{slang}} to persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->
 #: ''He's pulled that bird over there.''
 # {{transitive}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
 #: ''Each day, they pulled the old bread and set out fresh loaves.''
 # {{transitive|informal}} to [[do]] or [[perform]]
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
-# {{transitive}} To [[retrieve]] or [[generate]] for use.
+# {{transitive}} to [[retrieve]] or [[generate]] for use
 #: ''I'll have to '''pull''' a part number for that.''
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
-# {{intransitive}} To apply a force such that an object comes toward the person or thing applying the force.
+# {{intransitive}} to apply a force such that an object comes toward the person or thing applying the force
 #: ''You're going to have to pull harder to get that cork out of the bottle.''
-# {{intransitive|slang}} To succeed in finding a person with whom to have sex.
+# {{intransitive|slang}} to succeed in finding a person with whom to have sex
 #: ''I '''pulled''' at the club last night.''
-# To toss a [[frisbee]] with the intention of launching the disc across the length of a field.
-# {{intransitive}} To [[row]]
+# to toss a [[frisbee]] with the intention of launching the disc across the length of a field
+# {{intransitive}} to [[row]]
 #*'''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
 #*:It had been a sort of race hitherto, and the rowers, with set teeth and compressed lips, had '''pulled''' stroke for stroke. 
 
@@ -158,18 +158,18 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 ===Noun===
 {{en-noun}}
 
-# An act of pulling (applying force).
+# An act of pulling (applying force)
 #: ''He gave the hair a sharp '''pull''' and it came out.''
 # An [[attractive]] [[force]] which causes [[motion]] towards the source
 #: ''The spaceship came under the '''pull''' of the gas giant.''
 #: ''iron fillings drawn by the '''pull''' of a magnet''
 #: ''She took a '''pull''' on her cigarette.''
-# Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]].
+# Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]]
 #: ''a zipper '''pull'''''
 # {{slang}} [[influence]], especially as a means of gaining [[advantage]]
 # [[appeal|Appeal]] or [[attraction]] or (as of a movie star)
-# {{internet}} {{uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''.
-# A journey made by [[row]]ing.
+# {{internet}} {{uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''
+# A journey made by [[row]]ing
 #*'''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter V
 #*:As Blunt had said, the burning ship lay a good twelve miles from the Malabar, and the '''pull''' was a long and a weary one. Once fairly away from the protecting sides of the vessel that had borne them thus far on their dismal journey, the adventurers seemed to have come into a new atmosphere. 
 
@@ -225,12 +225,11 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 ==Estonian==
 
 ===Noun===
-'''pull'''
+{{et-noun}}
 
 # [[bull]]
 # [[ox]]
 
-[[Category:Estonian nouns]]
 [[Category:et:Cattle]]
 
 ----
