/* Translations */ entire SC lang <e.g.#12914279>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -36,7 +36,6 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 {{trans-top|abbreviation for “for example”}}
 * Arabic: [[على سبيل المثال]]
 * Armenian: {{t|hy|օր.|tr=òr.}} {{qualifier|[[օրինակ]]}}
-* Bosnian: {{t-|bs|npr.}} {{qualifier|[[na]] [[primjer]]}}
 * Bulgarian: [[напр.]] {{qualifier|[[например]]}}
 * [[Catalan]]: [[p. ex.]] [[per exemple]]
 * Chinese: [[例如]] (li4 ru2)
@@ -55,8 +54,8 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Icelandic: {{t|is|t.d.}} {{qualifier|{{t|is|til dæmis}}}}
 * Italian: [[ad es.]] {{qualifier|[[ad esempio]]}}
 * Japanese: [[例]] (rei)
-{{trans-mid}}
 * Korean: [[예]] (ye)
+{{trans-mid}}
 * Latvian: [[piem.]] {{qualifier|[[piemēram]]}}
 * Lithuanian: [[pvz.]] {{qualifier|[[pavyzdžiui]]}}
 * Norwegian: {{t|no|f.eks.}} {{qualifier|{{t|no|for eksempel}}}}, {{t|no|t.d.}} {{qualifier|{{t|no|til dømes}}}}
@@ -66,9 +65,9 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Romanian: {{t-|ro|de exemplu}},  {{t|ro| de ex.}},  {{t-|ro|e.g.}}
 * Russian: [[напр.]] {{qualifier|[[например]]}}
 * [[Scottish Gaelic]]: {{t-|gd|me|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: [[нпр.]] {{qualifier|[[на]] [[пример]]}}
-*: Roman: [[npr.]] {{qualifier|[[na]] [[primer]]}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|нпр.}} {{qualifier|[[на]] [[пример]]}}
+*: Roman: {{t|sh|npr.}} {{qualifier|[[na]] [[primer]]}}
 * Slovak: [[napr.]] {{qualifier|[[napríklad]]}}
 * Slovene: [[npr.]] {{qualifier|[[na]] [[primer]]}}
 * Spanish: {{t-|es|por ejemplo}}
