--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -26,7 +26,6 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Arabic: {{Arab|[[يعني]]}} {{IPAchar|(yáʕni)}}
 * Armenian: {{t|hy|այսինքն|tr=aysink’n}}
 * Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
-* Croatian: {{t-|hr|tj.}} ({{l|hr|to|tȏ}} {{l|hr|jest|jȅst}})
 * Czech: {{t+|cs|tj.}} ([[to]] [[je]])
 * Danish: {{t|da|dvs.}} {{qualifier|{{t|da|det}} {{t|da|vil}} {{t|da|sige}}}}
 * Dutch: {{t-|nl|d.w.z.}} {{qualifier|[[dat]] [[wil]] [[zeggen]]}}
@@ -35,9 +34,9 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{qualifier|[[das heißt]]}}
 * Greek: {{t|el|δηλαδή|tr=diladí|sc=Grek}} {{qualifier|abbrev. {{t|el|δηλ.|tr=dil.|sc=Grek}}}}, {{t|el|ήτοι|tr=ítoi|sc=Grek}}, {{t|el|τουτέστιν|tr=toutéstin|sc=Grek}}
-{{trans-mid}}
 * Hebrew: {{t|he|דהיינו|tr=deháinu}},  {{t|he|כלומר|tr=klomár}},  {{t|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}
+{{trans-mid}}
 * Icelandic: {{t|is|þ.e.}} {{qualifier|{{t|is|það}} {{t|is|er}}}}, {{t|is|þ.e.a.s.}} {{qualifier|{{t|is|það}} {{t|is|er}} {{t|is|að}} {{t|is|segja}}}}
 * Italian: {{t+|it|cioè}}
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
@@ -45,6 +44,9 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Polish: [[tzn.]] {{qualifier|[[to]] [[znaczy]]}}, [[tj.]] {{qualifier|[[to]] [[jest]]}}
 * Portuguese: [[isto é]],  {{t|pt|ou seja}}
 * Russian: [[т. е.]] ([[то есть]], ''tó jest’'')
+* Serbo-Croatian: 
+*: Cyrillic: {{t-|sh|тј.|sc=Cyrl}} ({{l|sh|то}} {{l|sh|јест}})
+*: Roman: {{t-|sh|tj.}} ({{l|sh|to|tȏ}} {{l|sh|jest|jȅst}})
 * Spanish: {{t+|es|es decir}}
 * Swedish: {{t|sv|dvs}}, {{t|sv|d v s}}, {{t|sv|d.v.s.}} {{qualifier|{{t|sv|det}} {{t|sv|vill}} {{t|sv|säga}}}}
 * Turkish: {{t+|tr|yani}}
