--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -161,6 +161,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 
 {{trans-top|to orgasm}}
 * Bulgarian: {{t+|bg|свършвам|tr=svarshvam}}
+* [[Catalan]]: {{t|ca|escórrer-se}}
 * Chinese:
 *: Mandarin: {{t-|cmn|射|tr=shè|sc=Hani}}, {{t-|cmn|射精|tr=shèjīng|sc=Hani}}, {{qualifier|slang}} {{t|cmn|出水|tr=chūshuǐ|sc=Hani}}
 * Czech: {{t+|cs|udělat}} se
@@ -174,6 +175,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Polish: [[dochodzić]] / [[dojść]]
 * Portuguese: {{t+|pt|gozar}}
 * Russian: {{t+|ru|кончать|tr=končát’}} {{impf}}, {{t+|ru|кончить|tr=kónčit’}} {{pf.}}
+* Spanish: {{t|es|correrse}}
 {{trans-bottom}}
 
 {{trans-top|to become}}
