--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -36,7 +36,7 @@
 * German: [[haften]], [[klammern]]
 * Indonesian: {{t-|id|sangkut|alt=menyangkut|xs=Indonesian}}, {{t-|id|sangkut|alt=menyangkutkan|xs=Indonesian}}, {{t-|id|gantung|alt=bergantung|xs=Indonesian}}, {{t-|id|gantung|alt=menggantung|xs=Indonesian}}, {{t-|id|gantung|alt=menggantungkan|xs=Indonesian}}
 {{trans-mid}}
-* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
+* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t|it|abbarbicarsi}}
 * Japanese: {{t+|ja|掛ける}},  {{t+|ja|かける|tr=kakeru}},  {{t|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} (''vi''),  {{t|ja|ぶら下げる|tr=ぶらさげる, burasageru}} (''vt'')
 * Norwegian: {{t|no|klenge}}
 * Portuguese: {{t+|pt|agarrar}}
