--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive of {{term|vomito|vomitō|vomit|lang=la}}.
+From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vomitāre|lang=la}}, present active infinitive of {{term|vomito|vomitō|vomit repeatedly|lang=la}}, frequentative form of {{term|vomo|vomō|be sick, vomit|lang=la}}, from {{proto|Indo-European|wem-|to spew, vomit|lang=en}}. Cognate with {{etyl|ang|-}} {{term|wemman||to defile|lang=ang}}. More at {{l|en|wem}}.
 
 ===Pronunciation===
 * {{a|UK}} {{enPR|vŏm'ət}}, {{IPA|/ˈvɒmət/}}, {{SAMPA|/"vQm@t/}}
