--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -13,6 +13,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 {{en-noun}}
 
 # The [[act]] of [[#Verb|counting]] or [[tally]]ing a quantity.
+#: ''Give the chairs a quick '''count''' to check if we have enough.''
 # The result of a [[tally]] that reveals the [[number]] of items in a set; a [[quantity]] [[counted]].
 # A [[countdown]].
 # {{legal}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
