--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -52,6 +52,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 *: Roman: [[šafran#Serbian|šafran]] {{m}}
 * Slovene: {{t+|sl|žafran|m}}
 * Spanish: {{t-|es|azafrán|m}}
+* Swahili: {{t|sw|mzafarani}}
 * Swedish: {{t+|sv|saffran}}
 * Thai: [[หญ้าฝรั่น]] (Ya Faran)
 * Turkish: {{t+|tr|safran}}
@@ -87,6 +88,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 *: Roman: [[šafran#Serbian|šafran]]
 * Slovene: {{t+|sl|žafran|m}}
 * Spanish: {{t-|es|azafrán|m}}
+* Swahili: {{t|sw|zafarani}}
 * Swedish: {{t+|sv|saffran}}
 * Turkish: {{t+|tr|safran}}
 {{trans-bottom}}
@@ -119,6 +121,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Japanese: [[サフラン色]] (safuraniro)
 * Norwegian: {{t+|no|safran}}
 * Polish: [[szafran]] {{m}}, ([[kolor]]) [[szafranowy]] {{m}}
+* Swahili: {{t|sw|rangi ya zafarani}}
 * Swedish: {{t+|sv|saffran}}
 * Turkish: {{t+|tr|safran}}
 * Urdu: {{ur-Arab|[[کیسری]]}} (kesarī), {{ur-Arab|[[کیسریا]]}} (kesariyā)
