--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -20,6 +20,8 @@
 
 ====Translations====
 {{trans-top|simple past of come}}
+* Arabic:
+*: [[Egyptian Arabic]]: {{tø|arz|جيه|m|tr=ge|sc=Arab}}
 * Italian: {{t|it|venuto|m}}
 {{trans-mid}}
 * [[Scottish Gaelic]]: {{t|gd| thàinig|xs=Scottish Gaelic}}
