--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -20,7 +20,7 @@
 
 ====Translations====
 {{trans-top|simple past of come}}
-* Arabic:
+* Arabic: {{t|ar|جاء|m|tr=dʒa'|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|جيه|m|tr=ge|sc=Arab}}
 * Italian: {{t|it|venuto|m}}
 {{trans-mid}}
