--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -36,7 +36,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * French: {{t+|fr|compter}}
 * Icelandic: {{t-|is|talning|f}}
 * Portuguese: {{t|pt|contar}}
-* Russian: {{t|ru|счёт|m|tr=sčot|sc=Cyrl}}
+* Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|the result of a tally that reveals the number of items in a set}}
@@ -60,7 +60,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Navajo: {{tø|nv|nambooígíí}}
 * [[Old French]]: {{tø|fro|conte}}
 * Romanian: [[numărare]] {{f}}
-* Russian: {{t+|ru|счёт}}
+* Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}}
 * Slovene: {{t-|sl|rezultat|m}}
 * Spanish: {{t-|es|conteo|m}}
 {{trans-bottom}}
@@ -77,7 +77,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Macedonian]]: {{t|mk|одбројување|n|tr=odbrojúvanje}}
 * Polish: {{t+|pl|odliczanie|n}}
 * Romanian: {{t-|ro|numărătoare|f}}
-* Russian: {{t+|ru|отсчёт}}
+* Russian: {{t|ru|отсчёт|m|tr=otsčot|sc=Cyrl}}
 * Slovene: {{t-|sl|odštevanje|n}}
 {{trans-bottom}}
 
