--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -139,12 +139,14 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Galician]]: {{t+|gl|contar|xs=Galician}}
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μετράω|tr=metráo}}
+* {{trreq|Hebrew}}
 * Hindi: {{t|hi|गिनना|tr=ginnā|sc=Deva}}
 * Hungarian: {{t+|hu|számol}}
 * Icelandic: {{t+|is|telja}}
 * [[Ido]]: {{t|io|kontar|xs=Ido}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
+* {{trreq|Khmer}}
 {{trans-mid}}
 * Korean: {{t|ko|세다|tr=seda|sc=Kore}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
@@ -162,6 +164,9 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Romanian: {{t-|ro|număra}}
 * [[Romansch]]: {{t-|rm|enumerar|xs=Romansch}},  {{t|rm|dumbrar|xs=Romansch}}
 * Russian: {{t|ru|считать|tr=sčitát’|sc=Cyrl}} {{impf}}, {{t|ru|посчитать|tr=posčitát’|sc=Cyrl}} {{pf}}, {{t|ru|счесть|tr=sčest’|sc=Cyrl}} {{pf}}, {{t|ru|сосчитать|tr=sosčitát’|sc=Cyrl}} {{pf}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|бројати}}
+*: Roman: {{t|sh|brojati}}
 * Slovak: {{t|sk|počítať}}
 * Slovene: [[šteti]], [[prešteti]]
 * Spanish: {{t+|es|contar}}
