--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -124,7 +124,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Arabic: {{t|ar|عد|tr=3ádda|sc=Arab}}
 * Armenian: {{t-|hy|հաշվել|tr=hašvel}}
 * [[Breton]]: [[kontañ]]
-* Bulgarian: {{t|bg|броя}}
+* Bulgarian: {{t|bg|броя|tr=brója}}
 * [[Catalan]]: {{t+|ca|comptar}}
 * Chinese:
 *: Mandarin: {{t|zh|數|sc=Hani}}, {{t|zh|数|tr=shù|sc=Hani}}, {{t|zh|計數|sc=Hani}}, {{t|zh|计数|tr=jìshù|sc=Hani}}
@@ -168,7 +168,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 *: Cyrillic: {{t|sh|бројати}}
 *: Roman: {{t|sh|brojati}}
 * Slovak: {{t|sk|počítať}}
-* Slovene: [[šteti]], [[prešteti]]
+* Slovene: {{t|sl|šteti}}, {{t|sh|prešteti}}
 * Spanish: {{t+|es|contar}}
 * Swedish: {{t+|sv|räkna}}
 * [[Telugu]]: [[లెక్కించు]] (lekkiMchu)
