--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -124,6 +124,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Arabic: {{t|ar|عد|tr=3ádda|sc=Arab}}
 * Armenian: {{t-|hy|հաշվել|tr=hašvel}}
 * Belarusian: {{t|be|рахаваць|tr=raxavác'|sc=Cyrl}}, {{t|be|лічыць|tr=ličýc'|sc=Cyrl}}
+* Bengali: {{t|bn|গুনতি|tr=gunti|sc=Beng}}
 * [[Breton]]: [[kontañ]]
 * Bulgarian: {{t|bg|броя|tr=brója}}
 * [[Catalan]]: {{t+|ca|comptar}}
@@ -148,8 +149,8 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Ido]]: {{t|io|kontar|xs=Ido}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
-{{trans-mid}}
 * {{trreq|Khmer}}
+{{trans-mid}}
 * Korean: {{t|ko|세다|tr=seda|sc=Kore}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Latin: {{t+|la|numero}}, {{t-|la|computo}}
@@ -175,6 +176,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Swedish: {{t+|sv|räkna}}
 * [[Telugu]]: [[లెక్కించు]] (lekkiMchu)
 * Thai: {{t|th|นับ|tr=nab|sc=Thai}}
+* Turkish: {{t|tr|saymak}}
 * Ukrainian: {{t|uk|рахувати|tr=raxuváty|sc=Cyrl}}, {{t|uk|лічити|tr=ličýty|sc=Cyrl}}
 * Urdu: {{t|ur|گنا|tr=ginnā|sc=ur-Arab}}
 * Vietnamese: {{t|vi|đếm}}
