t+lo:[[ນັບ]] t-balance t+my:[[ဢၢၼ်ႇ]] t+ka:[[თვლა]] t+km:[[រាប់]] ([[WT:EDIT|Assisted]]) <count#12989846>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -127,6 +127,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Bengali: {{t|bn|গুনতি|tr=gunti|sc=Beng}}, {{t|bn|গণনা|tr=gôṇna|sc=Beng}}
 * [[Breton]]: [[kontañ]]
 * Bulgarian: {{t|bg|броя|tr=brója}}
+* Burmese: {{t|my|ဢၢၼ်ႇ|tr=ʔaan2|sc=Mymr}}
 * [[Catalan]]: {{t+|ca|comptar}}
 * Chinese:
 *: Mandarin: {{t|zh|數|sc=Hani}}, {{t|zh|数|tr=shù|sc=Hani}}, {{t|zh|計數|sc=Hani}}, {{t|zh|计数|tr=jìshù|sc=Hani}}
@@ -139,7 +140,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Finnish: {{t+|fi|laskea}}
 * French: {{t|fr|compter}}
 * [[Galician]]: {{t+|gl|contar|xs=Galician}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|თვლა|tr=tvla|sc=Geor}}
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μετράω|tr=metráo}}
 * {{trreq|Hebrew}}
@@ -149,10 +150,11 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Ido]]: {{t|io|kontar|xs=Ido}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
-* {{trreq|Khmer}}
 {{trans-mid}}
+* [[Khmer]]: {{t|km|រាប់|tr=roap|sc=Khmr}}
 * Korean: {{t|ko|세다|tr=seda|sc=Kore}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
+* Lao: {{t|lo|ນັບ|tr=nāp|sc=Laoo}}
 * Latin: {{t+|la|numero}}, {{t-|la|computo}}
 * Latvian: {{t|lv|skaitīt|xs=Latvian}},  {{t|lv|rēķināt|xs=Latvian}}
 * [[Macedonian]]: {{t|mk|брои|tr=brói}}
