--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -148,10 +148,11 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Hungarian: {{t+|hu|számol}}
 * Icelandic: {{t+|is|telja}}
 * [[Ido]]: {{t|io|kontar|xs=Ido}}
+* Indonesian: {{t|id|menghitung}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
-{{trans-mid}}
 * [[Khmer]]: {{t|km|រាប់|tr=roap|sc=Khmr}}
+{{trans-mid}}
 * Korean: {{t|ko|세다|tr=seda|sc=Kore}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Lao: {{t|lo|ນັບ|tr=nāp|sc=Laoo}}
@@ -160,6 +161,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Macedonian]]: {{t|mk|брои|tr=brói}}
 * Malay: {{t+|ms|kira|xs=Malay}}
 * [[Middle English]]: {{tø|enm|counten}}
+* Mongolian: {{t|mn|тоолох|tr=tooloh|sc=Cyrl}}
 * [[Norwegian Nynorsk]]: {{t-|nn|telja|xs=Norwegian Nynorsk}}
 * [[Old French]]: {{tø|fro|conter}}
 * [[Old Norse]]: {{tø|non|telja}}
