--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Bengali: {{t|bn|গুনতি|tr=gunti|sc=Beng}}, {{t|bn|গণনা|tr=gôṇna|sc=Beng}}
 * [[Breton]]: [[kontañ]]
 * Bulgarian: {{t|bg|броя|tr=brója}}
-* {{trreq|Burmese}}
+* Burmese: {{t|my|ရေ|tr=yèi|sc=Mymr}}
 * [[Catalan]]: {{t+|ca|comptar}}
 * Chinese:
 *: Mandarin: {{t|zh|數|sc=Hani}}, {{t|zh|数|tr=shù|sc=Hani}}, {{t|zh|計數|sc=Hani}}, {{t|zh|计数|tr=jìshù|sc=Hani}}
