/* Translations */ fi <thunder#13001334>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -39,7 +39,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * [[thunder thighs]]
 
 ====Translations====
-{{trans-top|the sound caused by the discharge of atmospheric electrical charge}}
+{{trans-top|sound caused by  a lightning}}
 * Arabic: {{t+|ar|رعد|m|tr=ra`d}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
 * [[Chamicuro]]: {{tø|ccc|tswali}}
@@ -49,7 +49,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * Dutch: {{t+|nl|donder|m}}
 * Esperanto: {{t-|eo|tondro|xs=Esperanto}}
 * Estonian: {{t|et|kõu}}
-* Finnish: {{t+|fi|ukkonen}}
+* Finnish: {{t|fi|jyrinä}}
 * French: {{t+|fr|tonnerre|m}}
 * Georgian: {{t|ka|ქუხილი|tr=kʻuxili|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Donner|m}}
@@ -92,10 +92,10 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * [[West Frisian]]: {{t|fy|tonger|xs=West Frisian}}
 {{trans-bottom}}
 
-{{trans-top|a sound resembling thunder}}
+{{trans-top|sound resembling thunder}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
 * Czech: [[zahřmění]] {{n}}, [[hromová rána]] {{f}}, [[hřmění]] {{n}}
-* Finnish: {{t-|fi|jyrinä}}, {{t|fi|jyrähely}}
+* Finnish: {{t-|fi|jyrinä}}, {{t|fi|jyrähtely}}
 * German: {{t-|de|Donnern|n}}
 * Greek: {{t+|el|κεραυνός|m|tr=keravnós}}
 * Hungarian: {{t+|hu|dörgés}}
@@ -109,7 +109,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * Swedish: {{t|sv|åskmuller|n}}, {{t-|sv|muller|n}}, {{t|sv|åskdån|n}}, {{t+|sv|dån|n}}
 {{trans-bottom}}
 
-{{trans-top|a deep, rumbling noise}}
+{{trans-top|deep, rumbling noise}}
 * Czech: [[hřmění]] {{n}}, [[dunění]] {{n}}
 * Dutch: {{t|nl|gerommel|n}}
 * Finnish: {{t-|fi|jyrinä}}, {{t-|fi|jylinä}}, {{t-|fi|pauhu}}
@@ -134,6 +134,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * {{ttbc|gn}}: [[sunu]]
 * {{ttbc|id}}: [[gelegar]], [[suara]] [[petir]], [[suara halilintar]]
 * {{ttbc|ia}}: [[tonitro]]
+{{trans-mid}}
 * {{ttbc|rw}}: [[inkuba]]
 * {{ttbc|ku}}: [[birûsk]] {{f}}
 * {{ttbc|no}}: [[torden]]
