--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,6 +14,8 @@
 
 # possessing [[charm]] and [[attractive]]
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
+#Catherine Bulikowski
+#:[IMG]http://i54.tinypic.com/29bls8j.png[/IMG]
 # {{context|of the weather}} pleasant; clear.
 # [[well]] executed
 #: ''The skater performed a '''beautiful''' [[axel]].''
