t+ca:[[fundar]] t+es:[[fundar]] t+pt:[[fundar]] ([[WT:EDIT|Assisted]]) <found#13030671>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -40,6 +40,7 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 
 {{trans-top|to start organization}}
 * Armenian: {{t|hy|հիմնադրել|tr=himnadrel}}, {{t-|hy|ստեղծել|tr=steġçel}}, {{t|hy|հիմնել|tr=himnel}}
+* [[Catalan]]: {{t|ca|fundar}}
 * Czech: {{t+|cs|založit}}
 * Dutch: {{t+|nl|stichten}}
 * Finnish: {{t+|fi|perustaa}}
@@ -48,8 +49,10 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 {{trans-mid}}
 * Norwegian: {{t|no|grunnlegge}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
+* Portuguese: {{t|pt|fundar}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
 * [[Scots]]: {{tø|sco|foond|xs=Scots}}
+* Spanish: {{t|es|fundar}}
 * Swedish: {{t|sv|grunda}}
 * Turkish: {{t+|tr|kurmak}}
 {{trans-bottom}}
