t+fo:[[skjúrt]] ([[WT:EDIT|Assisted]]) <skirt#13030738>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -52,6 +52,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * Danish: {{t-|da|nederdel|c}}, {{t-|da|skørt|n}}
 * Dutch: {{t+|nl|rok|m}}
 * Esperanto: {{t-|eo|jupo|xs=Esperanto}}
+* Faroese: {{t|fo|skjúrt|n}}
 * Finnish: {{t+|fi|hame}}
 * French: {{t+|fr|jupe|f}}
 * [[Galician]]: [[saia]] {{f}}
