t+fo:[[brúgv]] t+ms:[[jambatan]] ([[WT:EDIT|Assisted]]) <bridge#13030794>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -81,7 +81,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Dutch: {{t+|nl|brug}}
 * Esperanto: {{t-|eo|ponto|xs=Esperanto}}
 * Estonian: {{t-|et|sild}}
-* {{trreq|fo}}
+* Faroese: {{t|fo|brúgv|f}}
 * Finnish: {{t+|fi|silta}}
 * French: {{t+|fr|pont|m}}
 * Georgian: {{t-|ka|ხიდი|tr=xidi|sc=Geor|xs=Georgian}}
@@ -112,7 +112,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * [[Lingala]]: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
 * Lithuanian: {{t+|lt|tiltas|m|xs=Lithuanian}}
 * [[Lower Sorbian]]: [[móst]] {{m}}
-* {{trreq|ms}}
+* Malay: {{t|ms|jambatan}}
 * [[Malayalam]]: [[പാലം]] (paalam)
 * Maltese: {{t-|mt|pont|m|xs=Maltese}}
 * {{trreq|mi}}
