--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -175,6 +175,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * [[Catalan]]: {{t-|ca|pont|m}}
 * Czech: {{t+|cs|můstek|m}}
 * Danish: {{t-|da|bro|c}}
+* Faroese: {{t|fo|brúgv|f}}
 * Finnish: {{t+|fi|silta}}, {{t|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}},  {{qualifier|Canada}} {{t+|fr|pont|m}}
 * German: {{t+|de|Brücke|f}}
@@ -198,6 +199,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Bosnian: {{t-|bs|kapetanski mostić|m}}
 * Bulgarian: {{t|bg|мостик|m}}
 * Croatian: {{t|hr|Komandni most|m}}
+* Faroese: {{t|fo|brúgv|f}}
 * Finnish: {{t|fi|komentosilta}}
 * French: {{t+|fr|passerelle|f}}
 * German: {{t+|de|Brücke|f}}
