--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -47,7 +47,7 @@
 * Dutch: {{t+|nl|spel}}
 * Esperanto: {{t-|eo|ludo|xs=Esperanto}}
 * [[Ewe]]: [[fefe]]
-* Filipino: {{t+|fi|laro}}
+* Filipino: [[laro]]
 * Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
 * French: {{t+|fr|jeu|m}}
 * [[Galician]]: {{t-|gl|xogo|m|xs=Galician}}
