--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -47,7 +47,7 @@
 * Dutch: {{t+|nl|spel}}
 * Esperanto: {{t-|eo|ludo|xs=Esperanto}}
 * [[Ewe]]: [[fefe]]
-* Filipino: {{t|fil|laro}}, {{tø|fil|laro}}
+* Filipino: {{tø|fil|laro}}
 * Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
 * French: {{t+|fr|jeu|m}}
 * [[Galician]]: {{t-|gl|xogo|m|xs=Galician}}
@@ -85,7 +85,7 @@
 {{trans-top|literary composition}}
 * Arabic: {{t|ar|مسرحية|f|tr=masraHíyya}}
 * Dutch: {{t+|nl|schouwspel|n}}
-* Filipino: {{t|fil|dula}}
+* Filipino: {{tø|fil|dula}}
 * Finnish: {{t+|fi|näytelmä}}
 * Irish: {{t|ga|dráma|m}}
 * [[Macedonian]]: {{t-|mk|драма|f|tr=dráma}}, {{t|mk|пиеса|f|tr=piésa}}
@@ -111,7 +111,7 @@
 * Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
 * Esperanto: {{t-|eo|teatraĵo|xs=Esperanto}}
 * [[Ewe]]: [[fefe]]
-* Filipino: {{t|fil|dula}}
+* Filipino: {{tø|fil|dula}}
 * Finnish: {{t+|fi|näytelmä}}
 * French: {{t+|fr|pièce de théâtre|f}}
 * German: {{t+|de|Schauspiel|n}}
@@ -144,7 +144,7 @@
 
 {{trans-top|individual's performance in a sport}}
 * Dutch: [[spelbeweging]] {{f}}
-* Filipino: {{t|fil|laro}}
+* Filipino: {{tø|fil|laro}}
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|játék}}
