--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -144,7 +144,7 @@
 
 {{trans-top|individual's performance in a sport}}
 * Dutch: [[spelbeweging]] {{f}}
-* Filipino: {{tø|fil|laro}}
+* Filipino: [[laro]]
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|játék}}
