--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -247,6 +247,7 @@
 * Czech: [[hrát]] si
 * Dutch: {{t+|nl|spelen}}
 * Esperanto: {{t-|eo|ludi|xs=Esperanto}}
+* Filipino: [[maglaro]]
 * Finnish: {{t+|fi|leikkiä}}
 * French: {{t+|fr|jouer}}
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
@@ -300,6 +301,7 @@
 *: Mandarin: {{qualifier|string instruments including piano}} {{t|zh|彈|sc=Hani}}, {{t|zh|弹|tr=dàn|sc=Hani}}, {{qualifier|wind instruments}} {{t|zh|吹|tr=chuī|sc=Hani}}, {{qualifier|percussion instruments}} {{t|zh|敲打|tr=qiāodǎ|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
+* Filipino: [[tumugtog]]
 * Finnish: {{t+|fi|soittaa}}
 * French: [[jouer]] de
 * Hebrew: {{t|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
@@ -331,6 +333,7 @@
 *: Mandarin: {{t|zh|演奏|tr=yǎnzòu|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}
+* Filipino: [[tumugtog]]
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * German: {{t+|de|spielen}}
@@ -395,6 +398,7 @@
 * Chinese: [[玩]] (wán)
 * Czech: {{t+|cs|hrát}}
 * Dutch: [[spelen]], [[meespelen]]
+* Filipino: [[maglaro]]
 * Finnish: {{t+|fi|pelata}}
 * French: [[jouer]] à
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
