t+sr:[[лука]] ([[WT:EDIT|Assisted]]) <port#13050514>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -63,6 +63,7 @@
 * Romanian: {{t-|ro|port|n}}
 * Russian: {{t+|ru|порт|m|tr=port}}
 * [[Scottish Gaelic]]: {{t|gd|port|m}}, {{t|gd|cala|m}}, {{t|gd|acarsaid|f}}
+* Serbian: {{t|sr|лука|f|tr=luka|sc=Cyrl}}
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
 * Swedish: {{t+|sv|hamn|c}}
