/* Noun */ +nikud and inflected forms from wikimilon <שבוע#13051843>

--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -7,12 +7,12 @@ From the root {{term|ש-ב-ע||sc=Hebr|tr=sh-v-`}}.
 * {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/|lang=he}}
 
 ===Noun===
-{{he-noun|g=m|pl=שבועות|tr=shavúa`}}
+{{he-noun|wv=שָׁבוּעַ|tr=shavúa|g=m|dual=שבועיים|dualdwv=שְׁבוּעַיִם|pl=שבועות|plwv=שָׁבוּעוֹת|cons=שבוע|conswv=שְׁבוּעַ־|plcons=שבועות|plconswv=שְׁבוּעוֹת}}
 
 # A [[week]]; a period of [[seven]] [[day]]s.
 
 ====Related terms====
-* {{onym|he|שבע|gloss=seven|sc=Hebr|tr=shéva`}}
+* {{onym|he|שבע|gloss=seven|tr=shéva}}
 
 [[el:שבוע]]
 [[es:שבוע]]
