--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -1,7 +1,7 @@
 ==Hebrew==
 
 ===Etymology===
-From the root {{term|ש-ב-ע||sc=Hebr|tr=sh-v-`}}.
+From the root {{term|ש־ב־ע|שׁ־ב־ע|lang=he|tr=sh-v-`}}.
 
 ===Pronunciation===
 * {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/|lang=he}}
