--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -26,11 +26,12 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 {{trans-top|to begin building}}
 * Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
 * Czech: {{t+|cs|založit}}
+* Danish: {{t|da|grundlægge}}
 * French: {{t+|fr|fonder}}
 * Italian: {{t|it|fondare}}
 * Norwegian: {{t|no|grunnlegge}}
-* Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 {{trans-mid}}
+* Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
 * [[Scots]]: {{tø|sco|foond|xs=Scots}}
 * Spanish: {{t-|es|fundar}}
@@ -42,6 +43,7 @@ From {{etyl|xno}} {{term|founder|lang=xno}} (French: {{term|fonder|lang=fr}}), f
 * Armenian: {{t|hy|հիմնադրել|tr=himnadrel}}, {{t-|hy|ստեղծել|tr=steġçel}}, {{t|hy|հիմնել|tr=himnel}}
 * [[Catalan]]: {{t|ca|fundar}}
 * Czech: {{t+|cs|založit}}
+* Danish: {{t|da|grundlægge}}
 * Dutch: {{t+|nl|stichten}}
 * Finnish: {{t+|fi|perustaa}}
 * French: {{t+|fr|fonder}}
