--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -42,7 +42,7 @@
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 * [[Macedonian]]: [[желка]] {{f}}
 * Mandarin: {{t-|cmn|王八|tr=wángba|sc=Hani}}
-* Norwegian: {{t-|no|skilpadde}}
+* Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}} 
 {{trans-mid}}
 * Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}
 * Polish: [[żółw lądowy]] {{m}}
