t+it:[[bottino]] ([[WT:EDIT|Assisted]]) <catch#13068118>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -138,6 +138,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * German: {{t+|de|Fang|m}}
 {{trans-mid}}
 * Hungarian: {{t|hu|fogás}}
+* Italian: {{t|it|bottino|m}}
 * Japanese: {{t|ja|捕る|tr=toru}}
 * Swedish: {{t|sv|fångst|c}}
 {{trans-bottom}}
