--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -147,6 +147,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Bulgarian: {{t+|bg|разбиране|n}}
 {{trans-mid}}
 * Finnish: {{t+|fi|huomio}}
+* Italian: {{t|it|colpo|m}}
 {{trans-bottom}}
 
 {{trans-top|the game of catching a ball {{jump|t|ball game}} }}
