--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -65,6 +65,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}} from {{etyl|fro}} {{term|estomac|lang
 * Japanese: {{t|ja|胃|tr=い, i|sc=Jpan}}, {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
 * Korean: {{t|ko|위|tr=wi|sc=Kore}} ([[胃]])
+* [[Latgalian]]: {{tø|ltg|pasirds}}
 * Latin: [[stomachus]] {{m}}
 * Latvian: {{t|lv|vēders|m}}, {{t|lv|kuņģis|m}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
