t+lv:[[cirtiens]] ([[WT:EDIT|Assisted]]) <cut#13079218>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -162,6 +162,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Icelandic: {{t+|is|skurður|m}}
 {{trans-mid}}
 * Italian: {{t+|it|taglio|m}}
+* Latvian: {{t|lv|cirtiens}}
 * Norwegian: {{t-|no|kutt|n}}
 * Portuguese: {{t+|pt|corte|m}}
 * Romanian: {{t|ro|tăiere|f}}
