t+ltg:[[svīsts]] ([[WT:EDIT|Assisted]]) <butter#13089859>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -220,6 +220,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Korean: [[버터]] (beoteo)
 * Kurdish: {{t+|ku|که‌ره‌|sc=ku-Arab}}
 * [[Lao]]: {{Laoo|[[ເບີ]]}} (bəə)
+* [[Latgalian]]: {{tø|ltg|svīsts}}
 * Latin: {{t-|la|butyrum}}
 * Latvian: {{t-|lv|sviests|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|sviestas|m|xs=Lithuanian}}
