t+tg:[[Олмон]] ([[WT:EDIT|Assisted]]) <Germany#13099390>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -103,6 +103,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Spanish: {{t+|es|Alemania|f}}
 * Swahili: [[Ujerumani]] ''(noun 6)'', {{t+|sw|Ujerumani|xs=Swahili}}
 * Swedish: {{t+|sv|Tyskland}}
+* [[Tajik]]: {{t|tg|Олмон|tr=Olmon|sc=Cyrl}}
 * [[Tamil]]: {{t|ta|ஜர்மனி|tr=jarmani|xs=Tamil}}
 * [[Telugu]]: {{t|te|జర్మని|tr=jarmani}}
 * Thai: {{t|th|ประเทศเยอรมัน|tr=bpràtêt yerráman}}, {{t|th|เยอรมนี|tr=yerromnee}}, {{t|th|เยอรมัน|tr=yerráman}}
