--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flaisk-|lang=en}}. Compare [[Old_High_German|Old High German]] "''fleisk''" (German "{{term|Fleisch|lang=de}}").
+From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flaisk-|lang=en}}, from {{proto|Indo-European|pleh₁ḱ|to tear, peel off|lang=en}}. Compare [[Old_High_German|Old High German]] "''fleisk''" (German "{{term|Fleisch|lang=de}}").
 
 ===Pronunciation===
 * {{audio|en-us-flesh.ogg|Audio (US)}}
