--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -69,6 +69,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Khmer]]: {{t|km|ប្រទេស​អាឡឺម៉ង់|tr=bprədtēh āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
 * [[Lao]]: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}
+* [[Latgalian]]: {{tø|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}
 {{trans-mid}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
