--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -73,6 +73,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 
 ====Translations====
 {{trans-top|to move from further away to nearer to}}
+* Albanian: {{t|sq|vij}}
 * Arabic: {{t|ar|جاء|tr=jaa'a}}, {{t|ar|حضر|tr=HáDara}}, {{t|ar|أتى|tr='ataa}}
 *: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab}}
 * Armenian: {{t|hy|գալ|tr=gal|sc=Armn}}
@@ -105,8 +106,8 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|来る|tr=くる, kúru}}, {{t|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}},  {{t|ja|おいでになる|tr=o-ide-ni naru}} {{qualifier|honorific}}, {{t|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * [[Khmer]]: {{t|km|មក|tr=mɔɔk|sc=Khmr}}
-* Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
 {{trans-mid}}
+* Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
 * Kurdish: [[hatin]], {{ku-Arab|[[هاتن]]}}
 * [[Lao]]: {{t|lo|ມາ|tr=maa|sc=Laoo}}
 * Latin: {{t+|la|venio}}
