--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -37,7 +37,7 @@
 * Bulgarian: {{t+|bg|избирам}}
 * [[Catalan]]: {{t|ca|escollir}}, {{t|ca|triar}}, {{t|ca|elegir}}
 * Chinese:
-*: Mandarin: {{t-|cmn|選舉|sc=Hani}},  {{t-|cmn|选举|tr=xuǎnjǔ|sc=Hani}}
+*: Mandarin: {{t-|cmn|選舉|sc=Hani}}, {{t-|cmn|选举|tr=xuǎnjǔ|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t-|hr|odabrati}}
 * Czech: {{t-|cs|volit}}, {{t-|cs|zvolit}}
 * Danish: {{t|da|vælge}}, {{t|da|kåre}}
@@ -68,7 +68,7 @@
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}},  {{t+|ru|выбрать|tr=výbrat’}} {{pf.}},  {{t+|ru|избирать|tr=izbirát’}} {{impf}},  {{t+|ru|избрать|tr=izbrát’}} {{pf.}}, {{t|ru|взять (vzyat')|sc=Cyrl}}
+* Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}}, {{t+|ru|выбрать|tr=výbrat’}} {{pf.}},  {{t+|ru|избирать|tr=izbirát’}} {{impf}}, {{t+|ru|избрать|tr=izbrát’}} {{pf.}}, {{t|ru|взять|tr=vzjat’}}
 * Scots: {{t|sco|wale}}
 * [[Scottish Gaelic]]: {{t-|gd|tagh|xs=Scottish Gaelic}}
 * Serbian: {{t-|sr|izabrati}}, {{t-|sr|odabrati}}
@@ -76,7 +76,7 @@
 * Spanish: {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* Thai: {{t|th|เลือก|tr=lêuak}},  {{t|th|คัดเลือก|tr=kát lêuak}}
+* Thai: {{t|th|เลือก|tr=lêuak}}, {{t|th|คัดเลือก|tr=kát lêuak}}
 * Turkish: {{t+|tr|seçmek}}
 * Urdu: {{t|ur|چننا|tr=cunnā|xs=Urdu}}
 * Vietnamese: {{t|vi|chọn|xs=Vietnamese}}
@@ -88,11 +88,11 @@
 * Arabic: {{t-|ar|اختار|tr=ikhtaara}}
 * Armenian: [[ընտրել]] (əntrel)
 * Bosnian: {{t-|bs|izabrati}}, {{t-|bs|odabrati}}
-* Bulgarian: {{t|bg|подбирам}},  {{t|bg|предпочитам}}
+* Bulgarian: {{t|bg|подбирам}}, {{t|bg|предпочитам}}
 * [[Catalan]]: {{t|ca|triar}}, {{t|ca|escollir}}, {{t|ca|elegir}}
 * Chinese:
 *: Gan: {{tø|gan|簡|sc=Hani}}, {{tø|gan|简|tr=gan3|sc=Hani}}
-*: Mandarin: {{t-|cmn|選擇|sc=Hani}},  {{t-|cmn|选择|tr=xuǎnzé|sc=Hani}},  {{t|cmn|挑選|sc=Hani}},  {{t|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
+*: Mandarin: {{t-|cmn|選擇|sc=Hani}}, {{t-|cmn|选择|tr=xuǎnzé|sc=Hani}}, {{t|cmn|挑選|sc=Hani}},  {{t|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t-|hr|odabrati}}
 * Danish: {{t|da|udvælge}}, {{t|da|vælge}}, {{t|da|foretrække}}
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
@@ -116,16 +116,16 @@
 * Persian: {{t+|fa|گزیدن|tr=gazidan|xs=Persian}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}},  {{t+|ru|выбрать|tr=výbrat’}} {{pf.}}
+* Russian: {{t+|ru|выбирать|tr=vybirát’}} {{impf}}, {{t+|ru|выбрать|tr=výbrat’}} {{pf.}}
 * [[Scottish Gaelic]]: {{t-|gd|tagh|xs=Scottish Gaelic}}
 * Serbian: {{t-|sr|izabrati}}, {{t-|sr|odabrati}}
 * Slovene: {{t+|sl|izbrati}}
 * Spanish: {{t+|es|escoger}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* Thai: {{t|th|เลือก|tr=lêuak}},  {{t|th|คัดเลือก|tr=kát lêuak}}
+* Thai: {{t|th|เลือก|tr=lêuak}}, {{t|th|คัดเลือก|tr=kát lêuak}}
 * Urdu: {{t|ur|چننا|tr=cunnā|xs=Urdu}}
-* Vietnamese: {{t|vi|chọn|xs=Vietnamese}},  {{t|vi|lựa chọn|xs=Vietnamese}},  {{t|vi|kén chọn|xs=Vietnamese}}
+* Vietnamese: {{t|vi|chọn|xs=Vietnamese}}, {{t|vi|lựa chọn|xs=Vietnamese}}, {{t|vi|kén chọn|xs=Vietnamese}}
 * Welsh: {{t|cy|dewis}}
 {{trans-bottom}}
 
@@ -133,7 +133,7 @@
 * Bosnian: {{t-|bs|odlučiti}}, {{t-|bs|odabrati}},
 * Bulgarian: {{t+|bg|решавам}}
 * Chinese:
-*: Mandarin: {{t-|cmn|決定|sc=Hani}},  {{t-|cmn|决定|tr=juédìng|sc=Hani}}
+*: Mandarin: {{t-|cmn|決定|sc=Hani}}, {{t-|cmn|决定|tr=juédìng|sc=Hani}}
 * Croatian: {{t-|hr|odlučiti}}, {{t-|hr|odabrati}}
 * Danish: {{t|da|foretrække}}, {{t|da|have lyst}}, {{t|da|finde for godt}}
 * Dutch: {{t+|nl|kiezen}}
@@ -145,12 +145,12 @@
 * Italian: {{t|it|decidere}}
 * Latin: {{t|la|lego}}
 * Maltese: {{t+|mt|iddeċieda|xs=Maltese}}
-* Portuguese: {{t+|pt|escolher}},  {{t+|pt|escolher|m}}
+* Portuguese: {{t+|pt|escolher}}, {{t+|pt|escolher|m}}
 * Romanian: {{t-|ro|vrea}}, {{t+|ro|prefera}}
-* Russian: {{t|ru|решать|tr=rešát'}} {{impf}},  {{t+|ru|решить|tr=rešít'}} {{pf.}}
+* Russian: {{t|ru|решать|tr=rešát'}} {{impf}}, {{t+|ru|решить|tr=rešít'}} {{pf.}}
 * [[Scottish Gaelic]]: {{t-|gd|tagh|xs=Scottish Gaelic}}
 * Serbian: {{t-|sr|odlučiti}}, {{t-|sr|odabrati}}
-* Spanish: {{t+|es|escoger}},  {{t+|es|elegir}}
+* Spanish: {{t+|es|escoger}}, {{t+|es|elegir}}
 {{trans-bottom}}
 
 {{checktrans-top}}
