t+la:[[fabula]] ([[WT:EDIT|Assisted]]) <play#13137613>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -124,6 +124,7 @@
 * Japanese: {{t|ja|演劇|tr=えんげき, engeki|sc=Jpan}}
 * Korean: {{t|ko|연극|tr=yeon-geuk|sc=Kore}}
 * Kurdish: {{t+|ku|şano|f}}, {{t+|ku|piyes|f}}, {{t+|ku|tiyatro|f}}
+* Latin: {{t|la|fabula|f}}
 * [[Macedonian]]: {{t-|mk|представа|f|tr=prédstava}}
 * [[Malayalam]]: [[നാടകം]] (naatakam)
 * Norwegian:
