t+ltg:[[mīsa]] t+lt:[[kūnas]] t+lv:[[ķermenis]] ([[WT:EDIT|Assisted]]) <flesh#13146403>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -40,7 +40,9 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
 * Italian: {{t+|it|carne}}
 {{trans-mid}}
-* Latvian: {{t|lv|miesa|f}}
+* [[Latgalian]]: {{tø|ltg|mīsa|f}}
+* Latvian: {{t|lv|miesa|f}}, {{t|lv|ķermenis|m}}
+* Lithuanian: {{t|lt|kūnas}}
 * Navajo: {{tø|nv|atsįʼ}}
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
 * Romanian: {{t+|ro|carne|f}}
