--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -26,7 +26,7 @@
 {{trans-top|cloth made of matted fibres of wool}}
 * Bosnian: {{t-|bs|pust|m}}, {{t|bs|filc|m}}
 * [[Catalan]]: {{t+|ca|feltre|m}}
-* Chinese: [[毛氈]], [[毛毡]] (máozhān)
+* Chinese:
 *: Mandarin: {{t|zh|毛氈|sc=Hani}}, {{t|zh|毛毡|tr=máozhān|sc=Hani}}
 * Czech: {{t+|cs|plsť|f}}
 * Danish: {{t-|da|filt|n}}
@@ -41,7 +41,7 @@
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t|ja|フェルト|tr=feruto|sc=Jpan}}, {{t|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
 * Norwegian: {{t-|no|filt|m}}
-* Russian: {{t+|ru|фетр|m}}, {{t|ru|фетр|m|tr=fetr|sc=Cyrl}}, {{t|ru|войлок|m|tr=vójlok|sc=Cyrl}}
+* Russian: {{t+|ru|фетр|m|tr=fetr|sc=Cyrl}}, {{t|ru|войлок|m|tr=vójlok|sc=Cyrl}}
 * Spanish: {{t-|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
 * Turkish: {{t|tr|keçe}}, {{t|tr|fötr}}, {{t|tr|kiyiz}}
