--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -89,6 +89,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Japanese: {{t-|ja|本質|tr=honshitsu}}, {{t-|ja|実体|tr=jittai}}
 * Norwegian: {{t-|no|formue|m}}
 * Polish: {{t-|pl|majątek|m}}
+* Romanian: {{t|ro|substanță|f}}
 * Russian: {{t|ru|вес|m|tr=ves}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|resurs|c}}
