--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -77,6 +77,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 * Chinese:
 *: Mandarin: {{t-|cmn|大臣|tr=dàchén|sc=Hani}}
 * Croatian: {{t-|hr|tajnik|m|alt=tȃjnīk}}, {{t-|hr|tajnica|f|alt=tȃjnica}}
+* Czech: {{t|cs|ministr|m}}
 * Esperanto: {{t-|eo|sekretario|xs=Esperanto}}
 * Finnish: {{t+|fi|ministeri}}
 * French: {{t+|fr|secrétaire}}
