--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -1,5 +1,7 @@
 {{also|旣}}
 ==Translingual==
+===Etymology===
+{{Han compound|皀|t1=bowl of rice|旡|t2=kneeling figure|ls=ic}} – person kneeling at bowl of rice – sitting down to eat (rice already finished cooking), or turning away (already finished eating).
 
 ===Han character===
 {{Han char|rn=71|rad=无|as=05|sn=9|four=7171<sub>4</sub>|canj=日戈一女山 (AIMVU)}}
