--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -3,6 +3,8 @@
 ===Etymology===
 {{Han compound|皀|t1=bowl of rice|旡|t2=kneeling figure|ls=ic}} – person kneeling at bowl of rice – sitting down to eat (rice already finished cooking), or turning away (already finished eating).
 
+Note the stroke order in the right component 旡, which may not be clear in the compressed form of this character: the left vertical and second horizontal are one stroke with a corner, while the upper right vertical continues in a diagonal stroke to lower left.
+
 ===Han character===
 {{Han char|rn=71|rad=无|as=05|sn=9|four=7171<sub>4</sub>|canj=日戈一女山 (AIMVU)}}
 
