--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -42,6 +42,8 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 
 ====Translations====
 {{trans-top|clothing}}
+* Arabic: {{t|ar|تنورة|f|tr=tannuura|sc=Arab}}
+* Belarusian: {{t|be|спадніца|f|tr=spadníca|sc=Cyrl}}
 * Bosnian: {{t-|bs|suknja|f}}
 * Bulgarian: {{t+|bg|пола|f}}
 * [[Chamicuro]]: {{tø|ccc|ita'la}}
@@ -63,16 +65,16 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * Icelandic: {{t+|is|pils|n}}
 * [[Ido]]: {{t+|io|jupo|xs=Ido}}
 * Italian: {{t+|it|gonna}}
-* Japanese: [[スカート]] ([[すかーと]]) (sukāto)
-* Korean: [[치마]] (chima)
-* [[Luxembourgish]]: {{t|lb|Jupe|f}}, {{t|lb|Rack|m}} (Rack is the wrong word sometimes employed to say skirt, but it means dress)
+* Japanese: [[スカート]] ([[すかーと]]) (sukāto), {{t|ja|スカート|tr=sukāto|sc=Jpan}}
 {{trans-mid}}
+* Korean: [[치마]] (chima), {{t|ko|치마|tr=chima|sc=Kore}}
+* [[Luxembourgish]]: {{t|lb|Jupe|f}}, {{t|lb|Rack|m}} (Rack is the wrong word sometimes employed to say skirt, but it means dress)
 * [[Macedonian]]: [[здолниште]] {{n}}, [[здолница]] {{f}}, [[сукња]] {{f}} {{qualifier|colloquial}}
 * Maltese: [[dublett]] {{m}}
 * Navajo: {{tø|nv|tłʼaakał}}
 * Norwegian: {{t|no|skjørt|n}}
 * [[Old English]]: [[scyrte]] {{f}}
-* Persian: {{fa-Arab|[[دامن دوخت]]}}
+* Persian: {{fa-Arab|[[دامن دوخت]]}}, {{t|fa|دامن|tr=dâman|sc=fa-Arab}}, {{t|fa|دامن دوخت|sc=fa-Arab}}
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
 * [[Romani]]: {{tø|rom|rotya|f}}
@@ -87,6 +89,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * [[Taos]]: [[yúwolaną]]
 * [[Telugu]]: [[పరికిణి]] (parikiNi)
 * Turkish: {{t+|tr|etek}}
+* Ukrainian: {{t|uk|спідниця|f|tr=spidnýcja|sc=Cyrl}}
 * [[Volapük]]: {{t|vo|juüp}}
 {{trans-bottom}}
 
