--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -66,8 +66,8 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * [[Ido]]: {{t+|io|jupo|xs=Ido}}
 * Italian: {{t+|it|gonna}}
 * Japanese: {{t|ja|スカート|tr=sukāto|sc=Jpan}}
-{{trans-mid}}
 * Korean: {{t|ko|치마|tr=chima|sc=Kore}}
+{{trans-mid}}
 * [[Luxembourgish]]: {{t|lb|Jupe|f}}, {{t|lb|Rack|m}} (Rack is the wrong word sometimes employed to say skirt, but it means dress)
 * [[Macedonian]]: [[здолниште]] {{n}}, [[здолница]] {{f}}, [[сукња]] {{f}} {{qualifier|colloquial}}
 * Maltese: [[dublett]] {{m}}
@@ -88,8 +88,10 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * Swedish: {{t+|sv|kjol|c}}
 * [[Taos]]: [[yúwolaną]]
 * [[Telugu]]: [[పరికిణి]] (parikiNi)
+* Thai: {{t|th|กระโปรง|tr=grà-bprohng|sc=Thai}}
 * Turkish: {{t+|tr|etek}}
 * Ukrainian: {{t|uk|спідниця|f|tr=spidnýcja|sc=Cyrl}}
+* Vietnamese: {{t|vi|váy}}
 * [[Volapük]]: {{t|vo|juüp}}
 {{trans-bottom}}
 
