--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -82,6 +82,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Malayalam]]: {{t|ml|ജര്മനി|tr=jarmani|sc=Mlym|xs=Malayalam}}
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: [[y Ghiarmaan]]
+* [[Marshallese]]: {{t|mh|Jāmne}}
 * Mongolian: {{t-|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
 * [[Nahuatl]]: {{t|nah|Teutontlālpan}}
 * Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
