added xiangqi piece definition (example source: http://zh.wikipedia.org/wiki/%E5%82%8C_(%E4%B8%AD%E5%9C%8B%E8%B1%A1%E6%A3%8B)) <傌#13168836>

--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -5,6 +5,7 @@
 
 # to [[curse]], to [[revile]], to [[abuse]]
 # to [[scold]]
+# the red '[[knight]]' piece in [[Chinese chess]] (often [[馬]])
 
 ====References====
 * {{Han ref|kx=0113.010|dkj=00947|dj=0240.110|hdz=10200.020|uh=508C|ud=20620|bh=D858|bd=55384}}
