--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -305,7 +305,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 
 {{trans-top|physical confrontation}}
 * Danish: {{t-|da|slagsmål}}, {{t-|da|ballade}}
-* Dutch: [[gevecht]] {{n}}, [[boel]] {{m}} (''colloquial, Flemish'')
+* Dutch: [[gevecht]] {{n}}, [[boel]] {{m}} {{qualifier|colloquial|Flanders}}
 * Finnish: {{t|fi|tappelu}}, {{t|fi|taistelu}}
 * French: {{t+|fr|bagarre|f}}
 * German: [[Keilerei]] {{f}}
