--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -129,6 +129,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Hebrew: {{t|he|עוקץ|m|tr='oqetz}}
 * Hungarian: {{t|hu|bökkenő}}
 * Italian: {{t-|it|trappola}}
+* Russian: {{t|ru|подвох|sc=Cyrl}}
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
 
