t+nv:[[yáłtiʼ]] ([[WT:EDIT|Assisted]]) <speak#13201842>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 {{trans-mid}}
 * Maltese: {{t|mt|tkellem}}
 * [[Nahuatl]]: [[tlatoa]]
+* Navajo: {{tø|nv|yáłtiʼ}}
 * [[Ngarrindjeri]]: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
 * [[Occitan]]: [[parlar]]
