--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -305,8 +305,9 @@
 * Finnish: {{t+|fi|suora}}
 * French: {{t+|fr|quinte|f}}
 * German: {{t+|de|Straße|f}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|sor}}
+{{trans-mid}}
+* Irish: {{t|ga|sraith|f}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto}}
 * Polish: {{t-|pl|strit|m}}
 * Russian: [[стрейт]] (strejt) {{m}}, [[стрит]] (strit) {{m}}
