t+ain:[[モマ]] ([[WT:EDIT|Assisted]]) <plum#13219152>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -136,6 +136,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 ====Translations====
 {{trans-top|the fruit}}
 * [[Afrikaans]]: [[pruim]]
+* [[Ainu]]: {{tø|ain|モマ|tr=moma}}
 * Arabic: {{Arab|[[إجاص|إجّاص]]}} {{IPAchar|(’ijjāṣ)}} {{m}}
 * Armenian: {{t-|hy|սալոր|tr=salor}}, {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
 * [[Basque]]: [[aran]]
