--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -227,7 +227,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 * Arabic: {{t|ar|كونت|m|tr=kuunt|sc=Arab}}
 * Armenian: {{t-|hy|կոմս|tr=koms}}
 * [[Breton]]: [[kont]] {{m}} -ed {{p}}
-* Bulgarian: {{t-|bg|граф|m}}
+* Bulgarian: {{t-|bg|граф|m|tr=graf}}
 * Chinese:
 *: Mandarin: {{t|zh|伯爵|tr=bójué|sc=Hani}}
 * Czech: {{t-|cs|hrabě|n}}
@@ -238,8 +238,8 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 * Finnish: {{t+|fi|kreivi}}
 * French: {{t+|fr|comte|m}}
 * German: {{t+|de|Graf|m}}
-* Greek: {{t+|el|κόμης|m}}
-* Hebrew: [[רוזן]] (rozen) {{m}}, {{t|he|רוזן|m|tr=rozen|sc=Hebr}}
+* Greek: {{t+|el|κόμης|m|tr=kómis}}
+* Hebrew: {{t|he|רוזן|m|tr=rozen|sc=Hebr}}
 * Hungarian: {{t+|hu|gróf}}
 * Icelandic: {{t+|is|greifi|m}}
 {{trans-mid}}
