/* Derived terms */ <come#13220946>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -43,7 +43,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[leave]], [[go]]
 
 ====Derived terms====
-{{rel-top|terms derived from come (verb)}}
+{{rel-top3|Terms derived from ''come'' (verb)}}
 * [[come about]]
 * [[come across]]
 * [[come after]]
@@ -53,22 +53,24 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[come at]]
 * [[come back]]
 * [[come by]]
+{{rel-mid3}}
 * [[come clean]]
 * [[come down]]
 * [[come forward]]
-{{rel-mid}}
 * [[come into]]
 * [[come off]]
 * [[come off it]]
 * [[come on]]
 * [[come out]]
 * [[come out with]]
+{{rel-mid3}}
 * [[come short]]
 * [[come to]]
 * [[come through]]
 * [[come true]]
 * [[come up]]
 * [[come with]]
+* [[come what may]]
 {{rel-bottom}}
 
 ====Translations====
