t+fa:[[مسکه]] t-balance ([[WT:EDIT|Assisted]]) <butter#13222401>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -232,7 +232,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * [[Old Church Slavonic]]: {{tø|cu|масло|n|tr=maslo|sc=Cyrs}}
 * [[Old English]]: {{t-|ang|butere|f|xs=Old English}}
 * [[Old Irish]]: {{tø|sga|imb|n}}
-* Persian: {{t+|fa|کره|tr=kare|xs=Persian}}
+* Persian: {{t+|fa|کره|tr=kare|xs=Persian}}, {{t|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
 * Romanian: {{t+|ro|unt|n}}
