--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -8,7 +8,7 @@
 [[Image:Adriaen Brouwer 001.jpg|thumb|Fight ([[brawl]])]]
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan|lang=ang}}, from {{proto|Germanic|fehtanan|lang=en}} (cf. West Frisian {{term|fjochtsje|lang=fy}}, {{term|fjuchte|lang=fy}}, Dutch {{term|vechten|lang=nl}}, German {{term|fechten|lang=de}}), from {{proto|Indo-European|pi̯ek||puk}} (cf. Irish {{term|uigim|lang=ga}} ‘I stitch’, Latin {{term|pugnus|lang=la}} ‘fist’, Tocharian B {{term|pyāk|lang=tob}} ‘to strike down, batter’, Albanian për{{term|përpjek|pjek|lang=sq}} ‘I strike’, Ancient Greek {{term|πύξ|tr=pyx|lang=grc||with the fist}}, {{term|πύκτης|tr=pýktēs|lang=grc||boxer}}{{rfscript|Tocharian}}).
+From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{proto|Germanic|fehtanan|to comb, tease, shear|lang=en}}, from {{proto|Indo-European|peḱ-|to comb, shear|lang=en}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|ang|-}} {{term|feht||wool, pelt, fleece|lang=ang}}.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
