--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -29,7 +29,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * Bulgarian: {{t-|bg|блондин|m}},  {{t-|bg|блондинка|f}}
 * [[Catalan]]: {{t+|ca|ros|m}} (only hair, not skin)
 * Chinese:
-*: Mandarin: {{t|zh|金髮|sc=Hani}}, {{qualifier|blond hair}} {{t|zh|金发|tr=jīnfà|sc=Hani}}
+*: Mandarin: {{t|zh|金髮|sc=Hani}}, {{t|zh|金发|tr=jīnfà|sc=Hani}} {{qualifier|blond hair}}
 * Danish: {{t|da|lyshåret}}; blond, {{t|da|blondine}}
 * Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}, {{t-|eo|blondulino|xs=Esperanto}}
@@ -43,7 +43,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
 * Italian: {{t+|it|biondo}}
 {{trans-mid}}
-* Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{qualifier|blond hair}} {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}}
+* Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}} {{qualifier|blond hair}}
 * Latin: {{t|la|flavicomus|alt=flāvicomus}}, {{t-|la|fulvus}}
 * [[Macedonian]]: {{t|mk|русокос|m|tr=rúsokos}},  {{t-|mk|плав|m|tr=plav}},  {{t|mk|русокоса|f|tr=rusókosa}},  {{t-|mk|плава|f|tr=pláva}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t|no|blondine}}
