t+ja:[[金髪]] t-balance t+ko:[[금발]] t+zh:[[金髮]] t+zh:[[金发]] t+ar:[[أشقر]] t+ru:[[русый]] t+de:[[blond]] t+de:[[hell]] t+fr:[[blond]] ([[WT:EDIT|Assisted]]) <blond#13247977>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -65,12 +65,19 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 
 ====Translations====
 {{trans-top|colour}}
+* Arabic: {{t|ar|أشقر|tr='áshqar|sc=Arab}}
 * Bulgarian: {{t|bg|рус}},  {{t+|bg|светъл}}
+* Chinese:
+*: Mandarin: {{t|zh|金髮|sc=Hani}}, {{t|zh|金发|tr=jīnfà|sc=Hani}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * Finnish: {{t+|fi|vaalea}}
-* [[Macedonian]]: {{t|mk|руса|f|tr=rúsa}},  {{t-|mk|плава|f|tr=pláva}}
+* French: {{t|fr|blond}}
 {{trans-mid}}
-* Russian: {{t+|ru|светлый|tr=svétlyj}}
+* German: {{t|de|blond}}, {{t|de|hell}}
+* Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
+* Korean: {{t|ko|금발|tr=geumbar-ui|alt=금발의|sc=Kore}}
+* [[Macedonian]]: {{t|mk|руса|f|tr=rúsa}},  {{t-|mk|плава|f|tr=pláva}}
+* Russian: {{t+|ru|светлый|tr=svétlyj}}, {{t|ru|русый|tr=rúsyj|sc=Cyrl}}
 * Swedish: {{t-|sv|blond}}
 * [[Volapük]]: {{t|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
 {{trans-bottom}}
