--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -35,7 +35,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * [[Galician]]: {{t+|gl|vomitar|xs=Galician}}
 * German: [[sich]] [[übergeben]], [[erbrechen]], {{t|de|kotzen}}
 * Greek: [[εμώ]], [[κάνω εμετό]], [[ξερνώ]] {{qualifier|colloquial}}
-* Hebrew: {{t|he|להקיא}}
+* Hebrew: {{t|he|הקיא|tr=hekí}}
 * Hungarian: {{t+|hu|hány}}
 * Italian: {{t-|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru), {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
@@ -45,7 +45,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Latvian: {{t|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|повраќа|tr=póvraḱa}},  {{t-|mk|блуе|tr=blúe}}
-* Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
+* Maltese: [[irrimetta]], [[qala']]
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * [[Old Irish]]: {{tø|sga|sceid|xs=Old Irish}}
 * Polish: {{t+|pl|wymiotować}}
