--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -24,6 +24,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Bengali: {{t-|bn|নিউজিল্যান্ড}}
 * [[Breton]]: {{t|br|Zeland-Nevez|xs=Breton}}
 * Bulgarian: {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija}}
+* [[Catalan]]: {{t|ca|Nova Zelanda}}
 * Chinese:
 *: Mandarin: {{t-|cmn|新西蘭|sc=Hani}}, {{t-|cmn|新西兰|tr=Xīn-Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
 * Czech: {{t-|cs|Nový Zéland|m}}
