--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -86,7 +86,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Burmese: {{t-|my|လာ|tr=la|sc=Mymr|xs=Burmese}}
 * [[Catalan]]: {{t+|ca|venir}}
 * Chinese:
-*: Mandarin: {{t-|cmn|來|sc=Hani}}, {{t-|cmn|来|tr=lái|sc=Hani}}
+*: Mandarin: {{t-|cmn|來|sc=Hani}}, {{t-|cmn|来|tr=[[lái]]|sc=Hani}}
 * [[Crimean Tatar]]: [[kelmek]]
 * Czech: {{t+|cs|přijít}}
 * Dutch: {{t+|nl|komen}}
