--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -34,7 +34,7 @@
 * Dutch: {{t+|nl|Tsjechische Republiek}}
 * Esperanto: {{t-|eo|Ĉeĥio|xs=Esperanto}}
 * Estonian: [[Tšehhi]], [[Tšehhimaa]], [[Tšehhi Vabariik]]
-* Faroese: {{t|fo|Kekkia|f|n}}
+* Faroese: {{t|fo|Kekkia|f|n}}, {{qualifier|rarely}} {{t|fo|Kekska lýðveldið|n}}
 * Finnish: {{t+|fi|Tšekin tasavalta}},  {{t+|fi|Tšekki}},  {{t|fi|Tšekinmaa}}
 * French: la [[République tchèque]] {{f}},  {{t+|fr|Tchéquie|f}}
 * German: {{t+|de|Tschechische Republik}},  {{t+|de|Tschechien|n}},  {{t|de|Tschechei|f}}
