t+dsb:[[Nimska]] t+dsb:[[Nimce]] t+hsb:[[Němska]] ([[WT:EDIT|Assisted]]) <Germany#13251695>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -103,6 +103,9 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 *: Roman: {{t|sh|Nemačka|f}}
 * Slovak: {{t|sk|Nemecko|n}}
 * Slovene: {{t+|sl|Nemčija|f}}
+* Sorbian:
+*: [[Lower Sorbian]]: {{tø|dsb|Nimska|f}}, {{tø|dsb|Nimce|p}}
+*: [[Upper Sorbian]]: {{t|hsb|Němska|f}}
 * Spanish: {{t+|es|Alemania|f}}
 * Swahili: [[Ujerumani]] ''(noun 6)'', {{t+|sw|Ujerumani|xs=Swahili}}
 * Swedish: {{t+|sv|Tyskland}}
