--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -32,6 +32,13 @@
 ====Readings====
 * {{ja-readings|on=[[きょく]] (kyoku)|kun=[[あさひ]] (asahi)}}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=あきら|rom=Akira}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|あきら]]
+
 ----
 
 ==Korean==
