/* English */ ety <coat#13273608>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,5 +1,7 @@
 ==English==
 [[Image:US Navy p coat wiki.jpg|thumb|Navy pea coat]]
+===Etymology===
+{{etyl|enm}}, from {{etyl|fro}} {{term|cote||lang=fro|coat, robe, tunic, overgarment}}
 
 ===Pronunciation===
 * {{audio|en-us-coat.ogg|Audio (US)}}
