--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -84,8 +84,8 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
-{{trans-mid}}
 * [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
+{{trans-mid}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
@@ -124,6 +124,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: Cyrillic: {{t-|sr|Француска|f|sc=Cyrl}}
 *: Roman: [[Francuska#Serbian|Francuska]] {{f}}
 * [[Sicilian]]: [[Francia]] {{f}}
+* [[Sinhalese]]: {{t|si|ප්‍රංශය|tr=praṁśaya|sc=Sinh}}
 * Slovak: [[Francúzsko]], {{t|sk|Francúzsko|n}}
 * Slovene: {{t+|sl|Francija|f}}
 * [[Sotho]]: France
