--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -40,6 +40,14 @@
 * [[健全]]
 * {{term|健闘||good fight, strenuous effort|tr=[[けんとう]], [[kentō]]|lang=ja|sc=Jpan}}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=けん|rom=Ken}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|けん]]
+
+
 ----
 
 ==Korean==
