--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -11,6 +11,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 
 ===Pronunciation===
 * {{IPA|/iːdʒiː/}}
+* It is sometimes pronounced as ''[[for exemple]]''.
 
 ===Adverb===
 {{en-adv|-}}
