--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -11,7 +11,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 
 ===Pronunciation===
 * {{IPA|/iːdʒiː/}}
-* It is sometimes pronounced as ''[[for exemple]]''.
+* It is sometimes pronounced as ''[[for example]]''.
 
 ===Adverb===
 {{en-adv|-}}
