--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -7,6 +7,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/}}
 * {{audio|en-us-i.e..ogg|Audio (US)}}
+* It is sometimes pronounced as ''[[that is]]''.
 
 ==={{abbreviation}}===
 '''i.e.'''
