t+it:[[bionda (female)]] t+it:[[biondo (male)]] ([[WT:EDIT|Assisted]]) <blonde#13286960>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -25,6 +25,7 @@
 * German: {{t|de|Blondine|f}}
 * Hungarian: {{t|hu|szőke}}
 {{trans-mid}}
+* Italian: {{t|it|bionda (female)|f}}, {{t|it|biondo (male)|m}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Spanish: {{t|es|rubia|f}}
 * Turkish: {{t|tr|sarışın}}
