t+de:[[Blond]] t+de:[[Blondine]] t+he:[[בלונדיני]] t+he:[[בלונדינית]] t-balance ([[WT:EDIT|Assisted]]) <blond#13287565>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -35,8 +35,8 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}, {{t-|eo|blondulino|xs=Esperanto}}
 * Finnish: {{t+|fi|vaaleaverikkö}}
 * French: {{t+|fr|blond}}, {{t+|fr|blonde}}
-* German: [[Blond]] mann, die [[Blondine]]
-* Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
+* German: [[Blond]] mann, die [[Blondine]], {{t|de|Blond|m}}, {{t|de|Blondine|f}}
+* Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}, {{t|he|בלונדיני|m|tr=blondyni|sc=Hebr}}, {{t|he|בלונדינית|f|tr=blondynit|sc=Hebr}}
 * Hungarian: {{t+|hu|szőke}}
 * Icelandic: {{t|is|ljóshærður|m}},  {{t|is|ljóshærð|f}}
 * [[Ido]]: [[blonda]]
