--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -101,6 +101,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Finnish: {{t+|fi|aine|alt=aineet}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t|el|ουσίες|tr=ousíes}} {{f|p}}
+* Hungarian: {{t|hu|szer}}
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
 * Polish: {{t+|pl|narkotyk|m}}
