--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -34,6 +34,13 @@
 ====Readings====
 * {{ja-readings|on=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=りん|rom=Rin}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|りん]]
+
 ----
 
 ==Korean==
