--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|Choice}}
 
 ===Etymology===
-{{etyl|enm}} ''chosen'', ''chesen'' from {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}, eventually from {{proto|Germanic|keusanan|lang=en}}, from {{proto|Indo-European|ǵews-}}. Cognate with Norwegian [[kjosa]], Dutch {{term|kiezen|lang=nl}}, Icelandic {{term|kjósa|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽|tr=kiusan|lang=got}}.
+From {{etyl|enm}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{etyl|ang}} {{term|ceosan|ċēosan|to choose, seek out, select, elect, decide, test, accept, settle for, approve|lang=ang}}, from {{proto|Germanic|keusanan|to taste, choose|lang=en}}, from {{proto|Indo-European|ǵeus-|to choose|lang=en}}. Cognate with {{etyl|fy|-}} {{term|kieze||to choose|lang=fy}}, Dutch {{term|kiezen||to choose|lang=nl}}, {{etyl|de|-}} {{term|kiesen||to choose|lang=de}}, Norwegian {{term|kjosa||to choose|lang=no}}, Icelandic {{term|kjósa||to elect, vote|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽||tr=kiusan|to test|lang=got}}.
 
 ===Pronunciation===
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{SAMPA|/tSu:z/}}
