--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -1,16 +1,16 @@
+{{slim-wikipedia}}
 ==English==
 
-===Etymology===
-From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūmōn|lang=en}}. Cognate with German {{term|Pflaume|lang=de}}, Dutch {{term|pruim|lang=nl}}. Compare {{term|prune|lang=en}}
-
 ===Pronunciation===
-{{wikipedia}}
 * {{enPR|plŭm}}, {{IPA|/plʌm/}}, {{SAMPA|/plVm/}}
 * {{audio|en-us-plum.ogg|Audio (US)}}
 * {{rhymes|ʌm}}
-*: '''Homophones''': [[plumb]]
+* {{homophones|plumb}}
 
-===Noun===
+===Etymology 1===
+From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūmōn|lang=en}}. Cognate with German {{term|Pflaume|lang=de}}, Dutch {{term|pruim|lang=nl}}. Compare {{term|prune|lang=en}}
+
+====Noun====
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
 {{en-noun}}
 
@@ -26,11 +26,11 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 # The edible, fleshy stone of ''Prunus mume'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The tree which bears this fruit, ''Prunus mume''. See ''[[plum blossom]]''.
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|tree}} [[plum tree]]
 * {{sense|edible fleshy stone of Prunus mume}} [[ume]]
 
-====Derived terms====
+=====Derived terms=====
 {{rel-top4|Derived terms}}
 * [[American black plum]]
 * [[Assyrian plum]]
@@ -133,7 +133,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[yellow plum]], [[yellow Spanish plum]]
 {{rel-bottom}}
 
-====Translations====
+=====Translations=====
 {{trans-top|the fruit}}
 * [[Afrikaans]]: [[pruim]]
 * [[Ainu]]: {{tø|ain|モマ|tr=moma}}
@@ -306,14 +306,14 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * {{ttbc|zu}}: [[iplamu]], [[ithungulu]]
 {{trans-bottom}}
 
-===Adjective===
+====Adjective====
 {{en-adj|more|-}}
 
 # {{comparable}} Of a dark bluish-red colour.
 # {{not comparable}} [[choice|Choice]]; especially [[lavish]] or [[preferred]].
 #: ''She landed a '''plum''' position as an executive for the firm.''
 
-====Translations====
+=====Translations=====
 {{trans-top|colour}}
 * Danish: {{t|da|blommefarvet}}
 * Dutch: [[donkerrood]], [[donkerrode]]
@@ -331,18 +331,6 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Swahili: {{t|sw|zambarau|xs=Swahili}}
 {{trans-mid}}
 * Vietnamese: {{t+|vi|chọn lọc|xs=Vietnamese}}
-{{trans-bottom}}
-
-===Adverb===
-{{en-adv|-}}
-
-# [[completely|Completely]]; [[utterly]].
-#: ''You're going to think I'm '''plum''' crazy for this, but I want to adopt all seven kittens.''
-
-====Translations====
-{{trans-top|completely; utterly}}
-* Vietnamese: [[quá sức]] ([[tưởng tượng]])
-{{trans-mid}}
 {{trans-bottom}}
 
 ===See also===
@@ -364,6 +352,31 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[Appendix:Colours]]
 {{bottom}}
 
+===Etymology 2===
+Phonetically based spelling of {{term|plumb}}
+
+====Adjective====
+{{en-adj}}
+
+# [[plumb|Plumb]]
+
+====Adverb====
+{{en-adv|-}}
+
+# [[completely|Completely]]; [[utterly]].
+#: ''You're going to think I'm '''plum''' crazy for this, but I want to adopt all seven kittens.''
+
+=====Translations=====
+{{trans-top|completely; utterly}}
+* Vietnamese: [[quá sức]] ([[tưởng tượng]])
+{{trans-mid}}
+{{trans-bottom}}
+
+====Verb====
+{{en-verb|plumm|ing}}
+
+# {{mining}} To [[plumb]].
+
 ===Anagrams===
 * [[lump#English|lump]]
 
@@ -371,7 +384,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 [[Category:Fruits]]
 [[Category:Purples]]
 [[Category:Trees]]
-
+[[Category:English intensifiers]]
+[[Category:English degree adverbs]]
 ----
 
 ==Romansch==
