t+arz:[[لحم]] ([[WT:EDIT|Assisted]]) <flesh#13414124>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -28,6 +28,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 {{trans-top|body tissue}}
 * Albanian: {{t|sq|mish|m}}, {{t|sq|tul|m}}
 * Arabic: {{t|ar|لحم|m|tr=laḥm|sc=Arab}}
+*: [[Egyptian Arabic]]: {{tø|arz|لحم|m|tr=laḥm|sc=Arab}}
 * Armenian: {{t+|hy|միս|tr=mis}}
 * [[Catalan]]: [[carn]] {{f}}
 * Danish: {{t+|da|kød}}
