onym > l using [[Project:AWB|AWB]] <ארץ#13418134>

--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -19,13 +19,13 @@ From {{proto|Semitic|ʾarṣ́-|lang=he}}.
 * The definite form of this noun is {{term|sc=Hebr|הארץ|lang=he|הָאָרֶץ|tr=haárets}}.
 
 ====Synonyms====
-* {{onym|he|אדמה|tr=adamá}}
+* {{l|he|אדמה|tr=adamá}}
 
 ====Related terms====
-* {{onym|he|ארצי|tr=arétzi}}
+* {{l|he|ארצי|tr=arétzi}}
 
 ====See also====
-* {{onym|he|מדינה|tr=m'diná}}
+* {{l|he|מדינה|tr=m'diná}}
 
 [[ar:ארץ]]
 [[el:ארץ]]
