format onyms sections using [[Project:AWB|AWB]] <het#13431953>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -179,22 +179,15 @@ Inflected form of ''[[hatan|hātan]]''.
 {{sv-adj-reg}}
 
 ====Synonyms====
-; of high temperature
-* (mycket) [[varm]]
-; feverish
-* [[febrig]]
-; spicy
-* [[stark]]
-; popular
-* [[inne]]
+* {{sense|of high temperature}}  (mycket) [[varm]]
+* {{sense|feverish}}  [[febrig]]
+* {{sense|spicy}}  [[stark]]
+* {{sense|popular}}  [[inne]]
 
 ====Antonyms====
-; of high temperature
-* [[iskall]], [[kall]], [[kylig]], [[sval]]
-; spicy
-* [[mild]]
-; popular
-* [[ute]]
+* {{sense|of high temperature}}  [[iskall]], [[kall]], [[kylig]], [[sval]]
+* {{sense|spicy}}  [[mild]]
+* {{sense|popular}}  [[ute]]
 
 ----
 
